--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,8 +85,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/citiesList"
+            <EditText
+                android:id="@+id/citiesInput"
                 android:layout_width="170dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="24dp"
@@ -113,7 +113,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView3"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="340dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
