--- a/app/src/main/res/layout/weather_widget.xml
+++ b/app/src/main/res/layout/weather_widget.xml
@@ -1,25 +1,46 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/widget_margin"
-    android:id="@+id/widgetLayout"
-    >
+    android:id="@+id/widgetLayout">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/holo_blue_light">
+        android:background="@drawable/widget_border"
+        tools:ignore="UselessParent">
+
         <TextView
-            android:id="@+id/appwidget_text"
+            android:id="@+id/appwidget_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:text="@string/appwidget_city"
+            android:text=""
             android:textColor="#000000"
             android:textSize="24sp" />
+
+        <ImageView
+            android:id="@+id/appwidget_icon"
+            android:layout_width="234dp"
+            android:layout_height="217dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="-20dp"
+            app:srcCompat="@drawable/i01d"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/appwidget_temp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="120dp"
+            android:text=""
+            android:textColor="#000000"
+            android:textSize="40sp" />
+
     </FrameLayout>
 
 </RelativeLayout>
