--- a/app/src/main/res/xml/weather_widget_info.xml
+++ b/app/src/main/res/xml/weather_widget_info.xml
@@ -5,5 +5,5 @@
     android:minWidth="250dp"
     android:minHeight="110dp"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:updatePeriodMillis="20"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:updatePeriodMillis="1800000"
+    android:widgetCategory="home_screen" />
